[java] Use Java Map instead of Guava Immutable Map in Chrome package