@@ -20,7 +20,6 @@ package org.openqa.selenium.chrome;
 import static org.openqa.selenium.remote.Browser.CHROME;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
@@ -35,7 +34,7 @@ public class AddHasCdp extends org.openqa.selenium.chromium.AddHasCdp {
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
-    return ImmutableMap.of(
+    return Map.of(
         EXECUTE_CDP, new CommandInfo("session/:sessionId/goog/cdp/execute", HttpMethod.POST));
   }
 
